<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="52dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAppName" />


        <Space
            android:id="@+id/spaceTitle"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

        <TextView
            android:id="@+id/textViewNumberRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:text="@string/number_register"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spaceTitle" />

        <EditText
            android:id="@+id/editTextNumberRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/style_text_view"
            android:gravity="center_vertical"
            android:hint="@string/number_register"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:maxLength="16"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumberRegister" />


        <TextView
            android:id="@+id/numberRegisterErrorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:text="@string/number_register"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="@+id/editTextNumberRegister"
            app:layout_constraintStart_toStartOf="@+id/editTextNumberRegister"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberRegister" />

        <Space
            android:id="@+id/spacePhone"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberRegisterErrorText" />


        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:text="@string/phone"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spacePhone" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/style_text_view"
            android:gravity="center_vertical"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />


        <TextView
            android:id="@+id/phoneErrorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:text="@string/phone"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
            app:layout_constraintStart_toStartOf="@+id/editTextPhone"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

        <Space
            android:id="@+id/spaceEmail"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneErrorText" />


        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spaceEmail" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/style_text_view"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />


        <TextView
            android:id="@+id/emailErrorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:text="@string/email"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />


        <Space
            android:id="@+id/spacePassword"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailErrorText" />


        <TextView
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spacePassword" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/style_text_view"
            android:gravity="center"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:maxLength="10"
                android:inputType="textPassword"
                android:padding="7dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordErrorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:text="@string/password"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="@+id/editTextPasswordLayout"
            app:layout_constraintStart_toStartOf="@+id/editTextPasswordLayout"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLayout" />


        <Space
            android:id="@+id/spaceReceive"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordErrorText" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegister"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/black"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spaceReceive" />

        <Space
            android:id="@+id/spaceRegister"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>